# janus-helloworld-plugin

./: CMakeLists.txt  README.md
src/: janus_helloworld_plugin.c
